--- a/cliffs.html
+++ b/cliffs.html
@@ -8,7 +8,7 @@
     <!-- Embed Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body id="home">
+<body id="cliffs">
     <div class="container">
         <!-- Header Section -->
         <header>
@@ -27,13 +27,30 @@
             </div>
         </header>
         <main>
-            <h2>Introducing California's Greatest Cliffs</h2>
-            <h3>What is so unique about California cliffs?</h3>
-            <p>California cliffs are one of a kind in the United States where no cliffs are as magnificent and beautiful as them. And California is the only state that have cliffs that fronts all possible environments: sea, river, mountains and canyons. There are four such individual unique cliffs: West Cliff, North Cliff, East Cliff and South Cliff. All offer fantastic overlooking views, recreational areas, camping sites, wildlife watch spots and overnight cabins.</p>
-
-            <h3>Where are these cliffs?</h3>
-            <p>Located within a 100 mile radius from Irvine, California, they can be reached by roads easily. The closest cliff to Irvine is West Cliff, which is the most popular and most visited.</p>
+            <h1>California's Greatest Cliffs</h1>
+            <p>The greatest cliffs are these four cliffs located in southern California. Each of these cliffs have their own uniqueness and beauty: West Cliff, North Cliff, East Cliff and South Cliff are the pride of California. Each cliff has many amenities to offer visitors such as recreational areas, camping sites, wildlife watch spots and overnight cabins.</p>
+            <p>No matter which direction you head from Irvine, California, the sites are easily reached within a 100 mile radius. West Cliff is the most popular among Westcliff University campus students because of its close proximity.</p>
         </main>
+
+        <div class="image-container">
+            <div class="image-item">
+              <div class="image-name">West Cliff</div>
+              <img src="images/cliff-west-sea.jpg" alt="Image 1">
+            </div>
+            <div class="image-item">
+              <div class="image-name">North Cliff</div>
+              <img src="images/cliff-north-mountain.jpg" alt="Image 2">
+            </div>
+            <div class="image-item">
+              <div class="image-name">East Cliff</div>
+              <img src="images/cliff-east-river.jpg" alt="Image 3">
+            </div>
+            <div class="image-item">
+              <div class="image-name">South Cliff</div>
+              <img src="images/cliff-south-canyon.jpg" alt="Image 4">
+            </div>
+          </div>
+          
         <section>
             <ul id="partners">
                 <li class="partner">
